# CRY-A-4MCP-Templates

./: .env  .gitignore  .pre-commit-config.yaml  AI_AGENT_START_HERE.md  DEPLOYMENT_CHECKLIST.md  DOCUMENTATION_AUDIT_REPORT.md  DOCUMENTATION_CONSOLIDATION_PLAN.md  DOCUMENTATION_CONTENT_UPDATES_PLAN.md  DOCUMENTATION_IMPLEMENTATION_PLAN.md  DOCUMENTATION_ORGANIZATION_STRATEGY.md  EXTRACTION_STRATEGIES_README.md  IMPLEMENTATION_PLAN.md  IMPORTANT_NOTES.md  Makefile  PACKAGE_SUMMARY.md  README.md  README_TESTING.md  TESTING_README.md  UNIVERSAL_NEWS_CRAWLER_README.md  check_dropdown.py  check_strategies.py  check_template_syntax.py  check_xcrypto_strategy.py  debug-api.js  debug-dropdown-fix.md  debug-edit-modal-blocked.md  debug-extraction-strategies-fix.md  debug-extractor-display.md  debug-loop.md  debug-url-mapping-issue.md  debug_crawler_creation.py  docker-compose.production.yml  factory_extension_usage.md  frontend-backend-integration-analysis.md  frontend-backend-integration-final-report.md  jest.config.js  migrate_hardcoded_data.py  migrate_hardcoded_urls.py  migrate_strategies.py  output_addaptive crawling.txt  (+22 more)
starter-mcp-server/: .env.example  ADAPTIVE_CRAWLING_IMPLEMENTATION_SUMMARY.md  Dockerfile  README.md  TESTING_FRAMEWORK_SUMMARY.md  debug-loop.md  migrate_hardcoded_data.py  pyproject.toml  pyrightconfig.json  quick_api_test.py  requirements.txt  run_migration.py  run_server.py  run_tests.py  simple_test_runner.py  simple_web_api.py  test_adaptive_crawling.py  test_api.py  test_api_endpoints.py  test_crawler.py  test_db_integration.py  test_update_mapping.py  update_schema.py  url_configs.db.backup_20250728_095421  url_configs_backup.sql  url_mappings.db.backup_20250728_095421  url_mappings.db.backup_20250806_182851  validate_url_mapping_extractors.py  verify_tests.py
starter-mcp-server/.github/workflows/: test.yml
starter-mcp-server/scratchpad/: debug-dropdown.md
starter-mcp-server/src/: database.py  exceptions.py  main.py
starter-mcp-server/src/api/: url_mappings.py
starter-mcp-server/src/cry_a_4mcp/: __init__.py  config.py  models.py  server.py  simple_web_api.py  web_api.py
starter-mcp-server/src/cry_a_4mcp/api/: __init__.py  models.py  models_separated.py  router.py
starter-mcp-server/src/cry_a_4mcp/core/: __init__.py  dependencies.py
starter-mcp-server/src/cry_a_4mcp/crypto_crawler/: CONFIG_README.md  README.md  __init__.py  crawler.py  crypto_website_config.json  extractors.py  models.py
starter-mcp-server/src/cry_a_4mcp/mcp_server/: __init__.py  base_tool.py  tools.py
starter-mcp-server/src/cry_a_4mcp/processing/: __init__.py  crypto_analyzer.py  sentiment_analyzer.py  trading_signals.py
starter-mcp-server/src/cry_a_4mcp/retrieval/: __init__.py  hybrid_search.py
starter-mcp-server/src/cry_a_4mcp/services/: __init__.py  adaptive_strategy_service.py
starter-mcp-server/src/cry_a_4mcp/storage/: __init__.py  crawler_db.py  data_loader.py  (+7 more)
starter-mcp-server/src/services/: url_mapping_service.py
starter-mcp-server/src/url_mapping_service/: __init__.py  config.py  database.py  exceptions.py  models.py  service.py
starter-mcp-server/tests/: conftest.py
starter-mcp-server/tests/api/: test_crawlers_crud.py  test_extractors_crud.py  test_openrouter_crud.py  test_url_configurations_crud.py  test_url_mappings_crud.py
starter-mcp-server/tests/backend/: test_url_mappings.py
starter-mcp-server/tests/e2e/: README.md  direct_test_async_webcrawler.py  direct_test_full_workflow.py
starter-mcp-server/tests/integration/: README.md  direct_test_crawler.py  direct_test_crypto_analyzer.py  direct_test_image_extraction.py  direct_test_knowledge_graph.py  direct_test_tools_integration.py  test_altcoin_season_index.py  test_coinmarketcap.py  test_crawl_website_tool.py  test_crypto_crawler.py  test_crypto_crawler_with_config.py  test_crypto_crawler_with_llm.py  test_end_to_end_workflows.py  test_extractors_api.py  test_mcp_server_integration.py  test_simple_api.py  test_url_manager_api.py  test_url_mappings_api.py  test_web_api_endpoints.py
starter-mcp-server/tests/unit/: README.md  direct_test_base_tool.py  direct_test_hybrid.py  direct_test_hybrid_search.py  direct_test_import.py  test_extractors.py  test_import.py  test_pytest_setup.py  test_url_configuration_db.py  test_url_mappings_db.py
(+307 files in other folders)
